5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4186/executions/1595_2895.log
== SUBMITION (2019-03-26 16:20:37) 
-- CODE:
quant_encomendados = int(input("Quantidade de jogos "))
unitario= float(input('valor unitario de cada'))
frete=float(input('frete')
				
total= quant_encomendados * unitario + frete				
-- EXECUTION TIME:
0.161468
-- ERROR:
  File "/home/codebench/codes/1595/2895/main.py", line 5
    total= quant_encomendados * unitario + frete				
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:20:55) 
-- CODE:
quant_encomendados = int(input("Quantidade de jogos "))
unitario= float(input('valor unitario de cada'))
frete=float(input('frete')
				
total= quant_encomendados * unitario + frete
				
print(tota)		
-- EXECUTION TIME:
0.165031
-- ERROR:
  File "/home/codebench/codes/1595/2895/main.py", line 5
    total= quant_encomendados * unitario + frete
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:21:00) 
-- CODE:
quant_encomendados = int(input("Quantidade de jogos "))
unitario= float(input('valor unitario de cada'))
frete=float(input('frete')
				
total= quant_encomendados * unitario + frete
				
print(total)		
-- EXECUTION TIME:
0.176987
-- ERROR:
  File "/home/codebench/codes/1595/2895/main.py", line 5
    total= quant_encomendados * unitario + frete
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:21:15) 
-- CODE:
quant_encomendados = int(input("Quantidade de jogos "))
unitario= float(input('valor unitario de cada'))
frete=float(input('frete')
				
total = quant_encomendados * unitario + frete
 		
print(total)		
-- EXECUTION TIME:
0.271188
-- ERROR:
  File "/home/codebench/codes/1595/2895/main.py", line 5
    total = quant_encomendados * unitario + frete
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:21:24) 
-- CODE:
quant_encomendados = int(input("Quantidade de jogos "))
unitario= float(input('valor unitario de cada'))
frete=float(input('frete')
				
total = quant_encomendados * unitario + frete
 		
print(total)		
-- ERROR:
File "XXXX", line 5
    total = quant_encomendados * unitario + frete
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:21:45) 
-- CODE:
quant_encomendados = int(input("Quantidade de jogos "))
unitario= float(input('valor unitario de cada'))
frete=float(input('frete')
				
total = quant_encomendados * unitario + frete
	
print(total)		
-- EXECUTION TIME:
0.208422
-- ERROR:
  File "/home/codebench/codes/1595/2895/main.py", line 5
    total = quant_encomendados * unitario + frete
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:21:46) 
-- CODE:
quant_encomendados = int(input("Quantidade de jogos "))
unitario= float(input('valor unitario de cada'))
frete=float(input('frete')
				
total = quant_encomendados * unitario + frete	
print(total)		
-- EXECUTION TIME:
0.176686
-- ERROR:
  File "/home/codebench/codes/1595/2895/main.py", line 5
    total = quant_encomendados * unitario + frete	
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:21:47) 
-- CODE:
quant_encomendados = int(input("Quantidade de jogos "))
unitario= float(input('valor unitario de cada'))
frete=float(input('frete')
				
total = quant_encomendados * unitario + frete	
print(total)		
-- ERROR:
File "XXXX", line 5
    total = quant_encomendados * unitario + frete	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:22:13) 
-- CODE:
quant_encomendados = int(input("Quantidade de jogos "))
unitario= float(input('valor unitario de cada'))
frete=float(input('frete')
				
total = quant_encomendados * unitario + frete	
print(total)		
-- ERROR:
File "XXXX", line 5
    total = quant_encomendados * unitario + frete	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:22:58) 
-- CODE:
quantencomendados = int(input("Quantidade de jogos "))
unitario= float(input('valor unitario de cada'))
frete=float(input('frete')
				
total = quantencomendados  *unitario+frete	
print(total)		
-- ERROR:
File "XXXX", line 5
    total = quantencomendados  *unitario+frete	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:23:00) 
-- CODE:
quantencomendados = int(input("Quantidade de jogos "))
unitario= float(input('valor unitario de cada'))
frete=float(input('frete')
				
total = quantencomendados  *unitario+frete	
print(total)		
-- EXECUTION TIME:
0.118839
-- ERROR:
  File "/home/codebench/codes/1595/2895/main.py", line 5
    total = quantencomendados  *unitario+frete	
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:23:21) 
-- CODE:
encomenda = int(input("Quantidade de jogos "))
unitario= float(input('valor unitario de cada'))
frete=float(input('frete')
				
total = quantencomendados  *unitario+frete	
print(total)		
-- ERROR:
File "XXXX", line 5
    total = quantencomendados  *unitario+frete	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:23:30) 
-- CODE:
encomenda = int(input("Quantidade de jogos "))
unitario= float(input('valor unitario de cada'))
frete=float(input('frete')
				
total = encomenda  *unitario+frete	
print(total)		
-- ERROR:
File "XXXX", line 5
    total = encomenda  *unitario+frete	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:23:40) 
-- CODE:
encomenda = int(input("Quantidade de jogos "))
unitario= float(input('valor unitario de cada'))
frete=float(input('frete')
				
total = encomenda * unitario + frete	
print(total)		
-- ERROR:
File "XXXX", line 5
    total = encomenda * unitario + frete	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:24:04) 
-- CODE:
encomenda = int(input("Quantidade de jogos "))
unitario= float(input('valor unitario de cada'))
frete=float(input('frete')
				
total= encomenda * unitario + frete	
print(total)		
-- ERROR:
File "XXXX", line 5
    total= encomenda * unitario + frete	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:24:20) 
-- CODE:
encomenda = int(input("Quantidade de jogos "))
unitario= float(input('valor unitario de cada'))
frete=float(input('frete')
				
total= encomenda * unitario + frete	
print(total)		
-- ERROR:
File "XXXX", line 5
    total= encomenda * unitario + frete	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:24:27) 
-- CODE:
encomenda = int(input("Quantidade de jogos "))
unitario= float(input('valor unitario de cada'))
frete=float(input('frete')
				
total= encomenda * unitario + frete	
print (total)		
-- ERROR:
File "XXXX", line 5
    total= encomenda * unitario + frete	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:24:33) 
-- CODE:
encomenda = int(input("Quantidade de jogos "))
unitario = float(input('valor unitario de cada'))
frete =float(input('frete')
				
total= encomenda * unitario + frete	
print (total)		
-- ERROR:
File "XXXX", line 5
    total= encomenda * unitario + frete	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:24:38) 
-- CODE:
encomenda = int(input("Quantidade de jogos "))
unitario = float(input('valor unitario de cada'))
frete =float(input('frete')
				
total= encomenda * unitario + frete	
print (total)		
-- EXECUTION TIME:
0.250561
-- ERROR:
  File "/home/codebench/codes/1595/2895/main.py", line 5
    total= encomenda * unitario + frete	
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:25:05) 
-- CODE:
encomenda = int(input("Quantidade de jogos "))
unitario = float(input("valor unitario de cada"))
frete =float(input("frete")
				
total= encomenda * unitario + frete	
print (total)		
-- ERROR:
File "XXXX", line 5
    total= encomenda * unitario + frete	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:25:08) 
-- CODE:
encomenda = int(input("Quantidade de jogos "))
unitario = float(input("valor unitario de cada"))
frete =float(input("frete")
				
total= encomenda * unitario + frete	
print (total)		
-- EXECUTION TIME:
0.198875
-- ERROR:
  File "/home/codebench/codes/1595/2895/main.py", line 5
    total= encomenda * unitario + frete	
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:25:27) 
-- CODE:
encomenda = int(input("Quantidade de jogos:"))
unitario = float(input("valor unitario de cada:"))
frete =float(input("frete:")
				
total= encomenda * unitario + frete	
print (total)		
-- ERROR:
File "XXXX", line 5
    total= encomenda * unitario + frete	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:25:29) 
-- CODE:
encomenda = int(input("Quantidade de jogos:"))
unitario = float(input("valor unitario de cada:"))
frete =float(input("frete:")
				
total= encomenda * unitario + frete	
print (total)		
-- EXECUTION TIME:
0.153622
-- ERROR:
  File "/home/codebench/codes/1595/2895/main.py", line 5
    total= encomenda * unitario + frete	
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:25:34) 
-- CODE:
encomenda = int(input("Quantidade de jogos:"))
unitario = float(input("valor unitario de cada:"))
frete =float(input("frete:"))
				
total= encomenda * unitario + frete	
print (total)		
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:25:46) 
-- CODE:
encomenda = int(input("Quantidade de jogos:"))
unitario = float(input("valor unitario de cada:"))
frete =float(input("frete:"))
				
total= encomenda * unitario + frete	
print (total)		
-- EXECUTION TIME:
0.138194
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
